# search_query_finder_package

./: .gitignore  LICENSE  README.md  setup.cfg
src/search_query_finder/: find_query.py
