[metadata]
name = search_query_finder
version = 0.0.2
author = Omar Zintan Mwinila-Yuori
author_email = zintanomar@gmail.com
description = A general function that extracts a search query from spoken text given search terms to look out for.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Omarzintan/search_query_finder
project_urls =
    Bug Tracker = https://github.com/Omarzintan/search_query_finder/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src